samples/_failures_safe/1761156808_bef17a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_61308761.c: In function ‘read_operator’:
./samples/SAFE/__tmp_61308761.c:156:17: error: expected ‘)’ at end of input
  156 |          (buffer
      |          ~      ^
      |                 )
./samples/SAFE/__tmp_61308761.c:156:10: error: expected declaration or statement at end of input
  156 |          (buffer
      |          ^
